########################################################################################
#############               生成 sntp 库文件                            ############## 
########################################################################################
LIST (APPEND sntp_LIB_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/sntp.c
    )
    
    
########################################################################################
#############              添加头文件目录                                 ############## 
########################################################################################
include_directories(  
    ${PROJECT_SOURCE_DIR}/includes  
    ${PROJECT_SOURCE_DIR}/utils
    ${PROJECT_SOURCE_DIR}/utils/sntp
)  

########################################################################################
#############               添加 链接库文件目录                           ############## 
########################################################################################
link_directories(  
    /usr/local/lib   
    )  


    
########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
IF (MODULE_sntp)
    #生成动态库  静态库则 STATIC  
    add_library (sntplib SHARED      ${sntp_LIB_SRCS})  
    add_library (sntps STATIC        ${sntp_LIB_SRCS})  
    # 设置版本号，SOVERSION为API版本号
    set_target_properties(sntplib   PROPERTIES VERSION 1.0.0 SOVERSION 1 )
ELSE (MODULE_sntp)
    MESSAGE(STATUS "Not Include sntp module.")
ENDIF (MODULE_sntp)


