########################################################################################
#############           添加所要编译的源文件.                             ############## 
########################################################################################
list( APPEND myplayer_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/logSystemUtils.c
    )


########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################

#####  System Utility libs   #####
add_subdirectory( MountUSB )
add_subdirectory( UsbDisk )
add_subdirectory( auto-upnp )


MESSAGE("${CMAKE_CURRENT_SOURCE_DIR} status.")




